# qdk

./: Cargo.toml
samples/python_interop/qdk_pythonic/: README.md  qdk_pythonic_api_demo.ipynb  qdk_pythonic_api_proposal.md  qdk_pythonic_domains.ipynb  qdk_pythonic_interop.ipynb
source/compiler/qsc_eval/: Cargo.toml
source/compiler/qsc_eval/src/: backend.rs
source/compiler/qsc_eval/src/backend/: dense_sim_tests.rs
source/gpusim/: BENCHMARKS.md  Cargo.toml  pyproject.toml
source/gpusim/benches/: bench_utils.rs  circuit.rs  measurement.rs  single_gate.rs
source/gpusim/examples/: precision_report.rs
source/gpusim/scripts/: test_all_features.sh
source/gpusim/src/: error.rs  gates.rs  gpu.rs  lib.rs  measurement.rs  precision.rs  precision_utils.rs  python.rs  qubit_map.rs
source/gpusim/src/gpu/: buffer.rs  device.rs  dispatch.rs  pipeline.rs  state_buffer.rs
source/gpusim/src/shaders/: collapse.wgsl  collapse_f64.wgsl  ds_math.wgsl  measurement.wgsl  measurement_f64.wgsl  multi_controlled_gate.wgsl  multi_controlled_gate_f64.wgsl  single_qubit_gate.wgsl  single_qubit_gate_f64.wgsl  two_qubit_gate.wgsl  two_qubit_gate_f64.wgsl
source/gpusim/tests/: api_correctness.rs  cross_validation.rs  f64_precision.rs  gate_correctness.rs  gpu_integration.rs  measurement.rs  precision_characterization.rs
source/gpusim/tests/cross_validation/: circuit.rs  edge_case_tests.rs  fundamental_tests.rs  generator.rs  random_tests.rs  runners.rs  structured_tests.rs
source/gpusim/tests/python/: conftest.py  test_basic.py  test_e2e.py  test_error_handling.py  test_gates.py  test_get_state.py  test_measurement.py
