[project]
name = "qdk-gpu-sim"
version = "0.1.0"
description = "GPU-accelerated dense state vector quantum simulator"
requires-python = ">= 3.10"
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Physics",
]

[build-system]
requires = ["maturin ~= 1.10.2"]
build-backend = "maturin"

[tool.maturin]
module-name = "qdk_gpu_sim"
features = ["python"]
